# naz_normlzr

./: .gitignore  Cargo.toml  README.md  config.toml  config.toml.template
src/: app.rs  main.rs
src/config/: mod.rs
src/media/: mod.rs  parser.rs  renamer.rs  scanner.rs
src/metadata/: mod.rs  tmdb.rs  tvdb.rs
src/template/: mod.rs
src/ui/: app_ui.rs  browser.rs  mod.rs  path_input.rs  preview.rs  statusbar.rs
